# education-kit

lab_6/: CMakeLists.txt  envSensorApp.cpp  envSensorApp.h  main.cpp
